@@ -1,5 +1,9 @@
 #+title: Embark changelog
 
+* Development version
+- =embark-bindings= and similar commands now show definition of keyboard
+  macros.
+- =embark-org= now recognizes Org links in non-org buffers.
 * Version 0.23 (2023-09-19)
 - Added a mode line indicator showing the number of selected targets in
   the current buffer (contributed by @minad, thanks!)
